--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,3 @@
-<div>
-  <ul>
-    <li>
-      <a routerLink="/home">Home</a> <!-- First Method to use routes -->
-    </li>
-    <li>
-      <a (click)="navigateToAbout()">About</a>
-    </li>
-  </ul>
+<div class="navbar-container">
+
 </div>
