--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,37 +1,84 @@
-.user-form {
-  max-width: 400px;
-  padding: 40px;
-  box-sizing: border-box;
-  background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+.login-page-container{
+  width: 100vw;
+  height: 93vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(33 36 37);
+}
+.login-form-container{
+  width: 30%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(24 26 27);
+}
+.login-logo-container{
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login-input-container{
+  width: 100%;
+  height: 60%;
+  display: flex;
+  align-items: center;
+}
+.login-social-container{
+  width: 100%;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-.user-form h2 {
+.login-logo-layout{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 60%;
+  font-family: Montserrat;
+  color: white;
   font-size: 1.5rem;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-.user-form label {
-  display: block;
-  margin-bottom: 8px;
-}
-
-.user-form input {
-  width: 100%;
-  padding: 10px 0;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  margin-bottom: 20px;
-}
-
-.user-form button {
-  padding: 12px;
-  border: none;
-  background-color: #3498db;
-  color: #fff;
-  border-radius: 5px;
   cursor: pointer;
+}
+
+.login-logo-style1{
+  width: 40%;
+  height: 100%;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login-input-layout{
   width: 100%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.login-input{
+  width: 80%;
+  height: 20%;
+  background-color: rgb(59 59 59);
+  border: none;
+  font-family: Montserrat;
+  border-radius: 5px;
+}
+.login-input:focus-visible{
+  border-color: yellow;
+}
+
+.login-btn{
+  width: 80%;
+  height: 20%;
+  background-color: #3f535d;
+  color: white;
+  border: none;
+  font-family: Montserrat;
+  border-radius: 5px;
 }
