Added log in and sign up pages !

--- a/src/app/sign-up-page/sign-up-page.component.html
+++ b/src/app/sign-up-page/sign-up-page.component.html
@@ -12,15 +12,32 @@
     </div>
     <div class="login-input-container">
       <div class="login-input-layout">
-        <input type="text" placeholder="Username or Email" name="username" class="login-input">
-        <input type="password" placeholder="Password" name="name" class="login-input">
-        <button type="submit" class="login-btn">Sign in</button>
-        <div class="other-btns">
-          <div class="other-btn">
-            Forget Password ?
-          </div>
-          <div class="other-btn" routerLink="signup">
-            Sign up
+        <div class="login-input-frame">
+          <input type="text" placeholder="Email" name="email" class="login-input">
+        </div>
+        <div class="login-input-frame">
+          <input type="text" placeholder="Name" name="name" class="login-input">
+        </div>
+        <div class="login-input-frame">
+          <input type="text" placeholder="Phone Number" name="phonenumber" class="login-input">
+        </div>
+        <div class="login-input-frame">
+          <input type="password" placeholder="Password" name="name" class="login-input">
+        </div>
+        <div class="login-input-frame">
+          <input type="password" placeholder="Confirm Password" name="name" class="login-input">
+        </div>
+        <div class="login-input-frame">
+          <button type="submit" class="login-btn">Sign up</button>
+        </div>
+        <div class="login-input-frame">
+          <div class="other-btns">
+            <div class="other-btn">
+              Forget Password ?
+            </div>
+            <div class="other-btn" routerLink="">
+              Log in
+            </div>
           </div>
         </div>
       </div>
