Some fixs with login and sign up

--- a/src/app/sign-up-page/sign-up-page.component.css
+++ b/src/app/sign-up-page/sign-up-page.component.css
@@ -76,6 +76,8 @@
   border: none;
   font-family: Montserrat;
   border-radius: 5px;
+  padding-left: 10px;
+  color: white;
 }
 .login-input:focus-visible{
   border-color: yellow;
@@ -89,6 +91,7 @@
   border: none;
   font-family: Montserrat;
   border-radius: 5px;
+
 }
 
 .other-btns{
