--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -8,7 +8,7 @@
 }
 .login-form-container{
   width: 30%;
-  height: 80%;
+  height: 95%;
   display: flex;
   flex-direction: column;
   background-color: rgb(24 26 27);
@@ -25,10 +25,11 @@
   height: 65%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .login-social-container{
   width: 100%;
-  height: 20%;
+  height: 15%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -55,33 +56,42 @@
   align-items: center;
 }
 .login-input-layout{
+  width: 80%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  row-gap: 15px;
+}
+.login-input-frame{
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
+  justify-content: center;
 }
 .login-input{
-  width: 80%;
-  height: 15%;
+  width: 90%;
+  height: 50%;
   background-color: rgb(59 59 59);
   border: none;
   font-family: Montserrat;
   border-radius: 5px;
+  padding-left: 10px;
+  color: white;
 }
 .login-input:focus-visible{
   border-color: yellow;
 }
 
 .login-btn{
-  width: 80%;
-  height: 20%;
+  width: 90%;
+  height: 60%;
   background-color: #3f535d;
   color: white;
   border: none;
   font-family: Montserrat;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .other-btns{
