--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,17 +12,26 @@
     </div>
     <div class="login-input-container">
       <div class="login-input-layout">
-        <input type="text" placeholder="Username or Email" name="username" class="login-input">
-        <input type="password" placeholder="Password" name="name" class="login-input">
-        <button type="submit" class="login-btn">Sign in</button>
-        <div class="other-btns">
-          <div class="other-btn">
-            Forget Password ?
-          </div>
-          <div class="other-btn" routerLink="signup">
-            Sign up
+        <div class="login-input-frame">
+          <input type="text" placeholder="Email" name="email" class="login-input">
+        </div>
+        <div class="login-input-frame">
+          <input type="password" placeholder="Password" name="name" class="login-input">
+        </div>
+        <div class="login-input-frame">
+          <button type="submit" class="login-btn">Sign in</button>
+        </div>
+        <div class="login-input-frame">
+          <div class="other-btns">
+            <div class="other-btn">
+              Forget Password ?
+            </div>
+            <div class="other-btn" routerLink="signup">
+              Sign up
+            </div>
           </div>
         </div>
+
       </div>
     </div>
     <div class="login-social-container">
