--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,9 +2,6 @@
   <div class="elements-container">
     <div class="left-side-container">
       <div class="logo-style" routerLink="home">
-        <!-- Logo Alternative
-        <img src="assets/EspritLogo.png" alt="Logo" class="logo-img">
-        -->
         <div class="logo-text">
           ESPRIT
         </div>
@@ -28,7 +25,7 @@
         Messages
       </div>
       <div class="element-style" routerLink="">
-        Farouk ?
+        Videos
       </div>
     </div>
     <div class="right-side-container">
