--- a/src/app/sign-up-page/sign-up-page.component.html
+++ b/src/app/sign-up-page/sign-up-page.component.html
@@ -13,22 +13,22 @@
     <div class="login-input-container">
       <div class="login-input-layout">
         <div class="login-input-frame">
-          <input type="text" placeholder="Email" name="email" class="login-input">
+          <input type="text" [(ngModel)]="user.email" placeholder="Email" name="email" class="login-input">
         </div>
         <div class="login-input-frame">
-          <input type="text" placeholder="Name" name="name" class="login-input">
+          <input type="text" [(ngModel)]="user.name" placeholder="Name" name="name" class="login-input">
         </div>
         <div class="login-input-frame">
-          <input type="text" placeholder="Phone Number" name="phonenumber" class="login-input">
+          <input type="text" [(ngModel)]="user.phone" placeholder="Phone Number" name="phonenumber" class="login-input">
         </div>
         <div class="login-input-frame">
-          <input type="password" placeholder="Password" name="name" class="login-input">
+          <input type="password" [(ngModel)]="user.password" placeholder="Password" name="name" class="login-input">
         </div>
         <div class="login-input-frame">
-          <input type="password" placeholder="Confirm Password" name="name" class="login-input">
+          <input type="password" [(ngModel)]="confirmPassword" placeholder="Confirm Password" name="name" class="login-input">
         </div>
         <div class="login-input-frame">
-          <button type="submit" class="login-btn">Sign up</button>
+          <button type="submit" (click)="signup()" class="login-btn">Sign up</button>
         </div>
         <div class="login-input-frame">
           <div class="other-btns">
