first angular M (products)

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -18,8 +18,8 @@
       <div class="element-style" routerLink="">
         Discuss
       </div>
-      <div class="element-style" routerLink="">
-        Market Place
+      <div class="element-style" routerLink="products">
+        Marketplace
       </div>
       <div class="element-style" routerLink="messages">
         Messages
