--- a/src/app/chat-page/chat-page.component.html
+++ b/src/app/chat-page/chat-page.component.html
@@ -1,10 +1,14 @@
 <p>chat-page works!</p>
-
+<script src="assets/main.js"></script>
 <div class="chat-container hidden" id="chat-page">
   <div class="users-list">
     <div class="users-list-container">
       <h2>Users</h2>
-      <ul id="connectedUsers">
+      <ul id="connectedUsers" >
+        <div *ngFor="let i of users">
+          <li class="user-item" *ngIf="i.name!=user.name" (click)="assignSelectedUser(i.name)">{{i.name}}</li>
+        </div>
+
       </ul>
     </div>
     <div>
@@ -14,16 +18,31 @@
   </div>
 
   <div class="chat-area">
-    <div class="chat-area" id="chat-messages">
+    <div class="chat-area" id="chat-messages" >
+
+      <div  *ngFor="let msg of messages" class="">
+        <div *ngIf="!msg.reply" class="message-container-sender">
+          <p class="message-sender">
+            {{ msg.text }}
+          </p>
+        </div>
+        <div *ngIf="msg.reply" class="message-container-receiver">
+          <p class="message-receiver">
+            {{ msg.text }}
+          </p>
+        </div>
+      </div>
     </div>
 
     <form id="messageForm" name="messageForm" class="hidden">
       <div class="message-input">
-        <input autocomplete="off" type="text" id="message" placeholder="Type your message...">
-        <button>Send</button>
+          <input autocomplete="off" (keyup)="updateMessage($event)" type="text" id="message" placeholder="Type your message...">
+        <button (click)="sendMessage()">Send</button>
       </div>
     </form>
   </div>
 </div>
 
 <button (click)="displayData()">click me</button>
+<button (click)="displayUsers()">click me to show all users</button>
+
