--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,30 +1,32 @@
-<div class="navbar-container">
+
+
+<div class="  navbar-container">
   <div class="elements-container">
     <div class="left-side-container">
-      <div class="logo-style" routerLink="home">
-        <div class="logo-text">
+      <div class="p-2 align-content-center " routerLink="home">
+        <div class="text-bg-danger " >
           ESPRIT
         </div>
-        <div class="text-logo">
+        <div class="text-bg-danger">
           Competitive
         </div>
       </div>
-      <div class="element-style" routerLink="">
+      <div class="element-style font-monospace align-content-center btn btn-outline-dark" routerLink="">
         Feed
       </div>
-      <div class="element-style" routerLink="" style="color: #c88f00">
+      <div class="element-style font-monospace align-content-center btn btn-outline-dark" routerLink="" style="color: #c88f00">
         Competitions
       </div>
-      <div class="element-style" routerLink="">
+      <div class="element-style font-monospace align-content-center btn btn-outline-dark" routerLink="">
         Discuss
       </div>
-      <div class="element-style" routerLink="">
+      <div class="element-style font-monospace align-content-center btn btn-outline-dark" routerLink="">
         Market Place
       </div>
-      <div class="element-style" routerLink="messages">
+      <div class="element-style font-monospace align-content-center btn btn-outline-dark" routerLink="">
         Messages
       </div>
-      <div class="element-style" routerLink="">
+      <div class="element-style font-monospace align-content-center btn btn-outline-dark" routerLink="">
         Videos
       </div>
     </div>
@@ -36,3 +38,4 @@
   </div>
 
 </div>
+
