--- a/src/app/pages/bal-de-projet-pages/contest/contest.component.html
+++ b/src/app/pages/bal-de-projet-pages/contest/contest.component.html
@@ -1,7 +1,7 @@
 <div class="rounded container-fluid bg-dark bg-gradient" >
   <div class="row justify-content-center ">
     <div class=" rounded col-6   text-center align-items-baseline">
-      <img src="assets/trophee.png" alt="imgz" style="max-width: 50%;">
+      <img src="assets/contest_image.png" alt="imgz" style="max-width: 50%;">
     </div>
 
   </div>
