--- a/src/app/components/footer/footer/footer.component.html
+++ b/src/app/components/footer/footer/footer.component.html
@@ -1,9 +1,9 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-body-tertiary text-muted bg-dark-subtle">
+<footer class="text-center text-lg-start bg-body-tertiary bg-dark  ">
   <!-- Section: Social media -->
-  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom bg-dark text-white">
     <!-- Left -->
-    <div class="me-5 d-none d-lg-block">
+    <div class="me-5 d-none d-lg-block bg-dark text-white">
       <span>Get connected with us on social networks:</span>
     </div>
     <!-- Left -->
@@ -34,7 +34,7 @@
   <!-- Section: Social media -->
 
   <!-- Section: Links  -->
-  <section class="">
+  <section class="bg-dark text-white">
     <div class="container text-center text-md-start mt-5">
       <!-- Grid row -->
       <div class="row mt-3">
@@ -52,7 +52,7 @@
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 bg-dark text-white">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
             Products
@@ -73,7 +73,7 @@
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4 bg-dark text-white">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
             Useful links
@@ -94,7 +94,7 @@
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 bg-dark text-white">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
           <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
@@ -113,7 +113,7 @@
   <!-- Section: Links  -->
 
   <!-- Copyright -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+  <div class="text-center p-4 bg-dark text-white" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2021 Copyright:
     <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
   </div>
