--- a/src/app/marketplace/products-front/products-front.component.html
+++ b/src/app/marketplace/products-front/products-front.component.html
@@ -16,7 +16,7 @@
         <h3>{{ product.productName }}</h3>
         <p class="description">{{ product.productDescription }}</p>
         <p class="price">{{ product.productPrice }} TND</p>
-        <button class="add-to-cart-button">Add to Cart</button>
+        <button class="add-to-cart-button" (click)="onAddToCart(product)">Add to Cart</button>
       </div>
     </div>
   </div>
