--- a/src/app/marketplace/cart/cart.component.html
+++ b/src/app/marketplace/cart/cart.component.html
@@ -1,8 +1,34 @@
-<div class="cart-empty">
-    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+<div *ngIf="cartItems && cartItems.length > 0; else emptyCart" class="cart-container">
+    <div class="cart-header">
+      <div class="item">Item</div>
+      <div class="quantity">Quantity</div>
+      <div class="price">Price</div>
+    </div>
+    <div *ngFor="let item of cartItems" class="cart-item">
+      <div class="item-details">
+        <img [src]="assetsImagePath + (item.product?.imageUrl || 'default-image.jpg')" alt="{{ item.product?.productName }}" class="product-image">
+        <div class="item-info">
+          <p class="product-name">{{ item.product?.productName }}</p>
+          <p class="product-category">{{ item.product?.category?.name }}</p>
+        </div>
+      </div>
+      <div class="quantity">{{ item.quantity }}</div>
+      <div class="price">{{ item.price }}</div>
+    </div>
+    <div class="total-sum">
+      <p>Total: {{ getTotalSum() }}</p>
+    </div>
+    <button (click)="orderNow()" class="order-button">Order Now</button>
+  </div>
+  
+  <ng-template #emptyCart>
+    <div class="cart-empty">
+      <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
         <circle cx="9" cy="21" r="1"></circle>
         <circle cx="20" cy="21" r="1"></circle>
         <path d="M1 1h4l2.68 12.58a2 2 0 0 0 1.92 1.42h10.8a2 2 0 0 0 1.92-1.42L23 6H6"></path>
-    </svg>
-    <p>Your cart is empty</p>
-</div>
+      </svg>
+      <p>Your cart is empty</p>
+    </div>
+  </ng-template>
+  
