--- a/src/app/pages/chat/chat-page/chat-page.component.css
+++ b/src/app/pages/chat/chat-page/chat-page.component.css
@@ -1,38 +1,23 @@
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f0f0f0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  flex-direction: column;
-}
+
 
 .chat-container {
   display: flex;
-  max-width: 800px;
-  min-width: 800px;
-  min-height: 600px;
-  max-height: 600px;
-  margin: 20px;
-  border: 1px solid #ccc;
-  background-color: #fff;
+  width:100%;
+  height: 93vh;
+
+  background-color: #282828;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  font-family: 'Montserrat';
 }
 
 .users-list {
   flex: 1;
   border-right: 1px solid #ccc;
-  padding: 20px;
   box-sizing: border-box;
-  background-color: #3498db;
+  background-color: rgb(26 26 26);
   color: #fff;
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -84,15 +69,15 @@ body {
   background-color: #ccc;
   margin: 10px 0;
 }
-
+.selected-user-details{
+  width: 100%;
+  height: 10%;
+}
 .chat-area {
   flex: 3;
   display: flex;
   flex-direction: column;
   padding: 20px;
-  box-sizing: border-box;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
 }
 .message-container-sender,.message-container-receiver{
   width: 100%;
@@ -102,6 +87,7 @@ body {
   align-items: center;
   font-family: Montserrat;
   font-size: 15px;
+  color: white;
 }
 .message-container-sender{
   justify-content: flex-end;
@@ -129,6 +115,7 @@ body {
 }
 .message-sender{
   background-color: #005591;
+  text-align: end;
 }
 .message-receiver{
   background-color: #6d6d6d;
@@ -166,6 +153,7 @@ body {
 .message-input {
   margin-top: auto;
   display: flex;
+
 }
 
 .message-input input {
@@ -174,15 +162,18 @@ body {
   border: 1px solid #ccc;
   border-radius: 5px;
   margin-right: 10px;
+  background-color: #212121;
+  color: white;
 }
 
 .message-input button {
   padding: 10px;
   border: none;
-  background-color: #3498db;
+  background-color: #212121;
   color: #fff;
   border-radius: 5px;
   cursor: pointer;
+  border: 1px white solid;
 }
 
 .user-form {
@@ -228,6 +219,13 @@ body {
 a.logout {
   color: #fff;
   text-decoration: none;
+}
+
+.chat-current-user{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10%;
 }
 
 
