--- a/src/app/components/footer/footer/footer.component.html
+++ b/src/app/components/footer/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-body-tertiary bg-dark  ">
+<footer class="text-center text-lg-start bg-body-tertiary  ">
   <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom bg-dark text-white">
     <!-- Left -->
