--- a/src/app/pages/bal-de-projet-pages/contest/contest.component.scss
+++ b/src/app/pages/bal-de-projet-pages/contest/contest.component.scss
@@ -62,6 +62,12 @@
   font-size: 0.875rem;
   color: #c5c5c5;
 }
+.blue{
+  color:lightskyblue;
+}
+.red{
+  color:red;
+}
 
 .card:hover {
   -webkit-box-shadow: 0px 0px 15px -8px rgba(66, 68, 90, 1);
@@ -70,7 +76,7 @@
 }
 .walletBalanceCard {
 
-  height: 100px;
+  height: fit-content;
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -94,6 +100,7 @@
   justify-content: flex-start;
   flex-direction: column;
   width: 120px;
+
   gap: 0px;
 }
 .balanceHeading {
