Fixed signup bugs !!

--- a/src/app/pages/sign-up-page/sign-up-page.component.css
+++ b/src/app/pages/sign-up-page/sign-up-page.component.css
@@ -91,7 +91,9 @@
   border: none;
   font-family: Montserrat;
   border-radius: 5px;
-
+}
+.login-btn:disabled,.login-btn[disabled]{
+  background-color: #888888;
 }
 
 .other-btns{
