--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 
 <app-menu></app-menu>
-
+<div class="main-container-fixed">
 <router-outlet></router-outlet>
-
+</div>
+  <div class="card-footer ">
 <app-footer></app-footer>
+</div>
