--- a/src/app/pages/show-contest/show-contest.component.html
+++ b/src/app/pages/show-contest/show-contest.component.html
@@ -36,17 +36,17 @@
   </div>
 </section>
 <!-- Related items section-->
-<section class="py-5 bg-dark object-fit-contain">
+<section class="py-5 bg-dark object-fit-contain text-white">
   <div class="container px-4 px-lg-5 mt-5">
     <h2 class="fw-bolder mb-4">Related products</h2>
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-      <div class="col mb-5">
+      <div class="col mb-5" *ngFor="let projects of projectList">
         <div class="card h-100">
           <!-- Product image-->
           <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
           <!-- Product details-->
           <div class="card-body p-4">
-            <div class="text-center">
+            <div class="text-center ">
               <!-- Product name-->
               <h5 class="fw-bolder">Fancy Product</h5>
               <!-- Product price-->
