--- a/src/app/pages/show-contest/show-contest.component.html
+++ b/src/app/pages/show-contest/show-contest.component.html
@@ -66,7 +66,7 @@
           </div>
           <!-- Product actions-->
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-            <div class="text-center"><a class="fa fa-circle-up  w-50 link-success" href="#"> vote up </a></div>
+            <div class="text-center"><a class="fa fa-circle-up  w-50 link-success" (click)="voteUp(projects.id)"> vote up </a></div>
           </div>
         </div>
       </div>
