--- a/src/app/components/chat/user-chat/user-chat.component.html
+++ b/src/app/components/chat/user-chat/user-chat.component.html
@@ -2,7 +2,9 @@
   <img src="assets/default-user.jpg" alt="" srcset="" class="user-chat-img-style">
   <div class="user-chat-details">
     {{username}}
-    <div class="user-chat-status">
+    <div *ngIf="status== 'ONLINE' " class="user-chat-status-online">
+    </div>
+    <div *ngIf="status== 'OFFLINE' " class="user-chat-status-offline">
     </div>
   </div>
 </div>
