--- a/src/app/components/chat/message-details/message-details.component.html
+++ b/src/app/components/chat/message-details/message-details.component.html
@@ -1,5 +1,4 @@
 <div class="{{cssClass}}">
-  <div class="chat-message-style">
-    {{message}}
+  <div [innerHTML]="message" class="chat-message-style">
   </div>
 </div>
